--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
       width: 100vw;
       height: 100vh;
     }
+
+    /* Make Tweakpane scrollable */
+    .tp-dfwv {
+      max-height: calc(100vh - 20px) !important;
+      overflow-y: auto !important;
+      overflow-x: hidden !important;
+    }
+
+    /* Custom scrollbar for Tweakpane */
+    .tp-dfwv::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    .tp-dfwv::-webkit-scrollbar-track {
+      background: rgba(0, 0, 0, 0.3);
+    }
+
+    .tp-dfwv::-webkit-scrollbar-thumb {
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 4px;
+    }
+
+    .tp-dfwv::-webkit-scrollbar-thumb:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
+
+    /* For Firefox */
+    .tp-dfwv {
+      scrollbar-width: thin;
+      scrollbar-color: rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0.3);
+    }
   </style>
 </head>
 <body>
