🔍 Add comprehensive SEO metadata and PWA support
SEO Implementation:
1. Meta Tags (index.html)
   - Title: 'Interactive Visual Canvas - 75 Audio-Reactive Generative Art Patterns | DNA Levity'
   - Description: 155 char optimized for search results
   - Keywords: generative art, audio reactive, WebGL, particle systems, etc.
   - Canonical URL: https://visuals.dnalevity.com
   - Language, robots, and revisit directives

2. Open Graph Tags (Social Media)
   - Facebook/LinkedIn optimized
   - og:image: 1200×630px reference
   - og:type: website
   - og:locale: en_US
   - Rich preview support

3. Twitter Card Tags
   - summary_large_image format
   - twitter:image: 1200×600px reference
   - twitter:creator: @dnalevity
   - Optimized for Twitter sharing

4. Schema.org Structured Data
   - JSON-LD WebApplication markup
   - Feature list (9 features)
   - Price: Free
   - Browser requirements
   - Screenshot references

5. PWA Manifest (public/manifest.json)
   - Name: 'Interactive Visual Canvas - DNA Levity'
   - Short name: 'Visual Canvas'
   - Display: fullscreen
   - Icons: 16×16 to 512×512
   - Categories: entertainment, art, music
   - Screenshots array
   - Share target support

6. Robots.txt (public/robots.txt)
   - Allow all search engines
   - Disallow: /node_modules/, /src/, /.git/
   - Sitemap reference
   - Crawl delay: 1 second
   - Specific bot directives

7. Sitemap.xml (public/sitemap.xml)
   - Main page entry
   - Priority: 1.0
   - Change frequency: weekly
   - Image metadata included
   - Last modified: 2025-10-16

8. SEO Documentation (SEO.md)
   - Complete implementation guide
   - Asset creation checklist
   - Search console setup instructions
   - Target keywords list
   - Social media strategy
   - Performance recommendations
   - Conversion goals
   - Backlink opportunities

Additional Features:
- Apple mobile web app support
- PWA install capability
- Theme color for mobile browsers
- Preconnect hints for performance
- Favicon references (multiple

--- a/index.html
+++ b/index.html
@@ -3,7 +3,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Visual Canvas</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>Interactive Visual Canvas - 75 Audio-Reactive Generative Art Patterns | DNA Levity</title>
+  <meta name="title" content="Interactive Visual Canvas - 75 Audio-Reactive Generative Art Patterns | DNA Levity">
+  <meta name="description" content="Experience 75 unique audio-reactive visual patterns powered by WebGL2. Real-time generative art with fluid dynamics, particle systems, sacred geometry, and multi-layer composition. React to music, mouse, and touch.">
+  <meta name="keywords" content="generative art, audio reactive visuals, WebGL canvas, visual synthesizer, particle systems, fluid dynamics, sacred geometry, interactive art, TeamLabs style, PixiJS, TypeScript, music visualizer, creative coding, procedural art, digital art installation">
+  <meta name="author" content="DNA Levity">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://visuals.dnalevity.com">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://visuals.dnalevity.com">
+  <meta property="og:title" content="Interactive Visual Canvas - 75 Audio-Reactive Generative Art Patterns">
+  <meta property="og:description" content="Experience 75 unique audio-reactive visual patterns powered by WebGL2. Real-time generative art with fluid dynamics, particle systems, and sacred geometry.">
+  <meta property="og:image" content="https://visuals.dnalevity.com/og-image.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="DNA Levity Visual Canvas">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://visuals.dnalevity.com">
+  <meta name="twitter:title" content="Interactive Visual Canvas - 75 Audio-Reactive Generative Art Patterns">
+  <meta name="twitter:description" content="Experience 75 unique audio-reactive visual patterns powered by WebGL2. Real-time generative art with fluid dynamics, particle systems, and sacred geometry.">
+  <meta name="twitter:image" content="https://visuals.dnalevity.com/twitter-image.jpg">
+  <meta name="twitter:creator" content="@dnalevity">
+  
+  <!-- Additional Meta Tags -->
+  <meta name="theme-color" content="#000000">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Visual Canvas">
+  <meta name="application-name" content="Interactive Visual Canvas">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="format-detection" content="telephone=no">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/manifest.json">
+  
+  <!-- Preconnect for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  
+  <!-- Schema.org structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Interactive Visual Canvas",
+    "description": "75 audio-reactive generative art patterns powered by WebGL2 with fluid dynamics, particle systems, and multi-layer composition",
+    "url": "https://visuals.dnalevity.com",
+    "applicationCategory": "EntertainmentApplication",
+    "operatingSystem": "Web Browser",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "DNA Levity"
+    },
+    "screenshot": "https://visuals.dnalevity.com/screenshot.jpg",
+    "featureList": [
+      "75 unique visual patterns",
+      "Audio-reactive animations",
+      "Multi-layer composition system",
+      "Real-time microphone input",
+      "Mouse and touch interaction",
+      "60 FPS WebGL2 rendering",
+      "Particle systems and fluid dynamics",
+      "Sacred geometry patterns",
+      "Customizable parameters"
+    ],
+    "browserRequirements": "Requires JavaScript and WebGL2"
+  }
+  </script>
+  
   <style>
     * {
       margin: 0;
