--- a/index.html
+++ b/index.html
@@ -132,6 +132,63 @@
       overflow-x: hidden !important;
     }
 
+    /* Style collapsed menu as small square with icon */
+    .tp-fldv[data-folded="true"] .tp-fldv_b {
+      width: 40px !important;
+      height: 40px !important;
+      padding: 8px !important;
+      border-radius: 4px !important;
+      background: rgba(0, 0, 0, 0.8) !important;
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+      margin-right: 48px !important; /* Space for fullscreen button */
+    }
+
+    .tp-fldv[data-folded="true"] .tp-fldv_b .tp-fldv_t {
+      display: none !important;
+    }
+
+    .tp-fldv[data-folded="true"] .tp-fldv_b img {
+      width: 24px !important;
+      height: 24px !important;
+      margin: 0 !important;
+    }
+
+    /* Fullscreen button styling */
+    .fullscreen-btn {
+      width: 40px;
+      height: 40px;
+      background: rgba(0, 0, 0, 0.8);
+      border: none;
+      border-radius: 4px;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background-color 0.2s;
+      position: fixed;
+      top: 10px;
+      right: 58px; /* Position next to menu button (40px + 8px margin + 10px) */
+      z-index: 1000;
+    }
+
+    .fullscreen-btn:hover {
+      background: rgba(0, 0, 0, 0.9);
+    }
+
+    .fullscreen-btn::before {
+      content: '⛶';
+      font-size: 20px;
+    }
+
+    .fullscreen-btn.fullscreen::before {
+      content: '⛶';
+      transform: rotate(180deg);
+    }
+
     /* Custom scrollbar for Tweakpane */
     .tp-dfwv::-webkit-scrollbar {
       width: 8px;
@@ -159,6 +216,7 @@
 </head>
 <body>
   <canvas id="canvas"></canvas>
+  <button id="fullscreen-btn" class="fullscreen-btn" title="Toggle Fullscreen"></button>
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
