fix: completely hide grey Tweakpane bar
- Hide entire .tp-dfwv container by default
- Update menu button to toggle Tweakpane visibility
- Remove grey bar completely, only show custom buttons

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       overflow-x: hidden !important;
     }
 
-    /* Hide the entire Tweakpane bar when collapsed */
-    .tp-fldv[data-folded="true"] {
+    /* Hide the entire Tweakpane container */
+    .tp-dfwv {
       display: none !important;
     }
 
