fix: make hamburger button open the menu
- Add .menu-open class to show Tweakpane when clicked
- Use classList.toggle() to properly show/hide menu
- Hamburger button now correctly toggles menu visibility

--- a/index.html
+++ b/index.html
@@ -132,9 +132,14 @@
       overflow-x: hidden !important;
     }
 
-    /* Hide the entire Tweakpane container */
+    /* Hide the entire Tweakpane container by default */
     .tp-dfwv {
       display: none !important;
+    }
+
+    /* Show Tweakpane when menu is open */
+    .tp-dfwv.menu-open {
+      display: block !important;
     }
 
     /* Menu button styling */
